// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Badge / appearance default 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "display": "grid",
        "gridGap": 10,
      }
    }
  >
    <div>
      <div
        data-css-1u5tlcq=""
      >
        default
         
        gray
      </div>
    </div>
    <div>
      <div
        data-css-1yciybc=""
      >
        default
         
        green
      </div>
    </div>
    <div>
      <div
        data-css-1f89r4e=""
      >
        default
         
        yellow
      </div>
    </div>
    <div>
      <div
        data-css-7kwx8e=""
      >
        default
         
        red
      </div>
    </div>
    <div>
      <div
        data-css-mteuqv=""
      >
        default
         
        blue
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Badge / appearance stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "display": "grid",
        "gridGap": 10,
      }
    }
  >
    <div>
      <div
        data-css-dkqbo5=""
      >
        stroke
         
        gray
      </div>
    </div>
    <div>
      <div
        data-css-1grr7kt=""
      >
        stroke
         
        green
      </div>
    </div>
    <div>
      <div
        data-css-1v1fufr=""
      >
        stroke
         
        yellow
      </div>
    </div>
    <div>
      <div
        data-css-waxjmf=""
      >
        stroke
         
        red
      </div>
    </div>
    <div>
      <div
        data-css-1knqer3=""
      >
        stroke
         
        blue
      </div>
    </div>
  </div>
</div>
`;
